fix(notification): use principal for notification auth